@@ -1566,6 +1566,7 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse>
     protected Float splitFuzz;
 
     private Properties properties;
+    protected String createNodeSet;
 
     private SplitShard(String collection) {
       super(CollectionAction.SPLITSHARD);
@@ -1574,6 +1575,11 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse>
 
     public SplitShard setRanges(String ranges) {
       this.ranges = ranges;
+      return this;
+    }
+
+    public SplitShard setCreateNodeSet(String nodeset) {
+      this.createNodeSet = nodeset;
       return this;
     }
 
@@ -1667,6 +1673,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse>
 
       if (properties != null) {
         addProperties(params, properties);
+      }
+      if (createNodeSet != null) {
+        params.set(CREATE_NODE_SET_PARAM, createNodeSet);
       }
       return params;
     }
